-*- text -*-

* Add support for Intel USER_MSR instructions.

* Add support for Intel AVX10.1.

* Add support for Intel PBNDKB instructions.

* Add support for Intel SM4 instructions.

* Add support for Intel SM3 instructions.

* Add support for Intel SHA512 instructions.

* Add support for Intel AVX-VNNI-INT16 instructions.

* Add support for Cortex-A520 for AArch64.

* Add support for Cortex-A720 for AArch64.

* Add support for Cortex-X4 for AArch64.

Changes in 2.41:

* Add support for the KVX instruction set.

* Add support for Intel FRED instructions.

* Add support for Intel LKGS instructions.

* Add support for Intel AMX-COMPLEX instructions.

* Add SME2 support to the AArch64 port.

* A new .insn directive is recognized by x86 gas.

* Add support for LoongArch LSX instructions.

* Add support for LoongArch LASX instructions.

* Add support for LoongArch LVZ instructions.

* Add support for LoongArch LBT instructions.

* Initial LoongArch support for linker relaxation has been added.

* Deprecate the LoongArch register aliases $v0, $v1, $x, $fv0 and $fv1.

Changes in 2.40:

* Add support for Intel RAO-INT instructions.

* Add support for Intel AVX-NE-CONVERT instructions.

* Add support for Intel MSRLIST instructions.

* Add support for Intel WRMSRNS instructions.

* Add support for Intel CMPccXADD instructions.

* Add support for Intel AVX-VNNI-INT8 instructions.

* Add support for Intel AVX-IFMA instructions.

* Add support for Intel PREFETCHI instructions.

* Add support for Intel AMX-FP16 instructions.

* gas now supports --compress-debug-sections=zstd to compress
  debug sections with zstd.

* Add --enable-default-compressed-debug-sections-algorithm={zlib,zstd}
  that selects the default compression algorithm
  for --enable-compressed-debug-sections.

* Add support for various T-Head extensions (XTheadBa, XTheadBb, XTheadBs,
  XTheadCmo, XTheadCondMov, XTheadFMemIdx, XTheadFmv, XTheadInt, XTheadMemIdx,