@@ -1,5 +1,7 @@
 -*- text -*-
 
+* Add support for 'armv8.9-a' and 'armv9.4-a' for -march in AArch64 GAS.
+
 * Add support for Intel USER_MSR instructions.
 
 * Add support for Intel AVX10.1.
